GNOME Bugzilla – Bug 760476
idle-monitor-native: Don't leak user active watches
Last modified: 2016-05-11 13:32:43 UTC
This fixes an issue analogous to bug 760330 for the X11 backend, except on this backend we wouldn't crash accessing free'd memory. Instead we're leaking watches since we steal them from the hash table which means that when they're removed in _meta_idle_monitor_watch_fire() they're no longer there and thus they're never free'd.
Created attachment 318760 [details] [review] idle-monitor-native: Don't leak user active watches
Review of attachment 318760 [details] [review]: Code's much better.
Attachment 318760 [details] pushed as 5e57af6 - idle-monitor-native: Don't leak user active watches
*** Bug 756261 has been marked as a duplicate of this bug. ***